--- a/irembo-frontend/src/App.css
+++ b/irembo-frontend/src/App.css
@@ -6,3 +6,9 @@
   content: " *";
   color: red;
 }
+
+.input-phone-number input:focus {
+  outline: none !important;
+  border: none !important;
+  box-shadow: none !important;
+}
